--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,5 +28,6 @@ dependencies {
     implementation 'com.android.support:design:28.0.0'
     implementation 'com.theartofdev.edmodo:android-image-cropper:2.3.1'
     implementation 'com.google.firebase:firebase-ml-vision:20.0.0'
+    implementation 'com.facebook.android:audience-network-sdk:5.1.0'
 }
 apply plugin: 'com.google.gms.google-services'
