--- a/gradle.properties
+++ b/gradle.properties
@@ -14,6 +14,6 @@ org.gradle.jvmargs=-Xmx1536m
 
 # For jenkin build
 android.enableBuildCache=false
-android.enableAapt2=true
+android.enableAapt2=false
 
 
