--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,14 +20,16 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'com.android.support:appcompat-v7:28.0.0'
+    //noinspection GradleCompatible
+    implementation 'com.android.support:support-media-compat:28.0.0'
+    implementation 'com.android.support:support-v4:28.0.0'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     implementation 'com.android.support:design:28.0.0'
     implementation 'com.theartofdev.edmodo:android-image-cropper:2.3.1'
-    implementation 'com.google.firebase:firebase-ml-vision:20.0.0'
-    implementation 'com.facebook.android:audience-network-sdk:5.1.0'
+    implementation 'com.google.firebase:firebase-ml-vision:24.0.0'
+    implementation 'com.facebook.android:audience-network-sdk:5.3.0'
 }
 apply plugin: 'com.google.gms.google-services'
